[gd_scene load_steps=4 format=3 uid="uid://c25l0m1m2hnqh"]

[ext_resource type="Script" uid="uid://j0k2e4bmv8rd" path="res://script/main_game.gd" id="1_ym0ui"]
[ext_resource type="PackedScene" uid="uid://c5o0xxxf2rn57" path="res://scene/oldplayer.tscn" id="2_1u8wu"]
[ext_resource type="PackedScene" uid="uid://ds41eqoyl05s8" path="res://scene/ennemy.tscn" id="2_ju4l3"]

[node name="Main_Game" type="Node"]
script = ExtResource("1_ym0ui")
ennemy = ExtResource("2_ju4l3")

[node name="Player" parent="." instance=ExtResource("2_1u8wu")]
position = Vector2(324, 921)

[node name="beam" type="Node" parent="."]

[node name="Ennemy_Container" type="Node" parent="."]

[node name="ennemy_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="ennemy_spawn_timer" to="." method="_on_ennemy_spawn_timer_timeout"]
